[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["Дмитрий <kriukov@pos-credit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
